Add tests for JSON and YAML export. Closes #38 and #39.

--- a/test/fixtures/test_empty.yaml
+++ b/test/fixtures/test_empty.yaml
@@ -1,1 +1,5 @@
---- {}
+---
+:created: '2012-03-28T21:54:21+02:00'
+:last_accessed: '2012-03-28T22:01:49+02:00'
+:last_modified: '2012-03-29T22:46:29+02:00'
+:entries: []
