--- a/test/fixtures/test_all.yaml
+++ b/test/fixtures/test_all.yaml
@@ -1,3 +1,11 @@
 ---
-foo: baz
-some: thing
+:created: '2012-03-28T21:54:21+02:00'
+:last_accessed: '2012-03-28T22:01:49+02:00'
+:last_modified: '2012-03-29T22:46:29+02:00'
+:entries:
+- :key: foo
+  :value: one
+- :key: bar
+  :value: two
+- :key: Chuck Norris
+  :value: Roundhouse Kick
